Replace omniqlo.store domain in www sites

--- a/www/lp-003/privacy.html
+++ b/www/lp-003/privacy.html
@@ -16,7 +16,7 @@
 
   <main class="mx-auto max-w-4xl px-6 py-10">
     <h1 class="text-3xl font-bold text-gray-900">Datenschutzerklärung</h1>
-    <p class="mt-3 text-gray-700">Dieses Dokument beschreibt, welche personenbezogenen Daten auf der Website omniqlo.store erhoben werden, wie sie verarbeitet werden und welche Rechte Nutzerinnen und Nutzer haben. Die Erklärung gilt für Besucherinnen und Besucher, die eine Anfrage oder Bestellung aufgeben. Die Verarbeitung erfolgt ausschließlich innerhalb der Europäischen Union, primär in Deutschland und unter Beachtung der DSGVO.</p>
+    <p class="mt-3 text-gray-700">Dieses Dokument beschreibt, welche personenbezogenen Daten auf der Website omniklad.com erhoben werden, wie sie verarbeitet werden und welche Rechte Nutzerinnen und Nutzer haben. Die Erklärung gilt für Besucherinnen und Besucher, die eine Anfrage oder Bestellung aufgeben. Die Verarbeitung erfolgt ausschließlich innerhalb der Europäischen Union, primär in Deutschland und unter Beachtung der DSGVO.</p>
 
     <section class="mt-8 rounded-lg border border-gray-200 bg-white p-5 shadow-sm">
       <h2 class="text-xl font-semibold text-gray-900">Unternehmensangaben</h2>
