--- a/www/lp-IT003/index.html
+++ b/www/lp-IT003/index.html
@@ -332,7 +332,7 @@
   </div>
 
   <script>
-    window.CHECKOUT_API_BASE = "https://omniqlo.store";  // one config for checkout endpoint
+    window.CHECKOUT_API_BASE = "https://omniklad.com";  // one config for checkout endpoint
   </script>
   <script src="../_shared/checkout.js"></script>
 
