--- a/www/lp-IT003/privacy.html
+++ b/www/lp-IT003/privacy.html
@@ -17,7 +17,7 @@
   <main class="mx-auto max-w-4xl px-6 py-10">
 
     <h1 class="text-3xl font-bold text-gray-900">Informativa sulla privacy</h1>
-    <p class="mt-3 text-gray-700">Questa informativa descrive come Omniqlo raccoglie e tratta i dati personali inviati tramite i moduli del sito omniqlo.store. L’elaborazione avviene in conformità al GDPR e alle norme italiane applicabili. La logistica e la consegna degli ordini avvengono da magazzini situati in Italia con spedizione nazionale gratuita.</p>
+    <p class="mt-3 text-gray-700">Questa informativa descrive come Omniqlo raccoglie e tratta i dati personali inviati tramite i moduli del sito omniklad.com. L’elaborazione avviene in conformità al GDPR e alle norme italiane applicabili. La logistica e la consegna degli ordini avvengono da magazzini situati in Italia con spedizione nazionale gratuita.</p>
 
     <section class="mt-8 rounded-lg border border-gray-200 bg-white p-5 shadow-sm">
       <h2 class="text-xl font-semibold text-gray-900">Dati aziendali</h2>
