--- a/www/lp-IT003/terms.html
+++ b/www/lp-IT003/terms.html
@@ -17,7 +17,7 @@
   <main class="mx-auto max-w-4xl px-6 py-10">
 
     <h1 class="text-3xl font-bold text-gray-900">Termini e Condizioni</h1>
-    <p class="mt-3 text-gray-700">Questi termini disciplinano l’uso del sito omniqlo.store e la richiesta d’acquisto del prodotto ThundeaL TDA7W in Italia. Inviando il modulo dichiari di aver letto e accettato le condizioni riportate.</p>
+    <p class="mt-3 text-gray-700">Questi termini disciplinano l’uso del sito omniklad.com e la richiesta d’acquisto del prodotto ThundeaL TDA7W in Italia. Inviando il modulo dichiari di aver letto e accettato le condizioni riportate.</p>
 
     <section class="mt-8 rounded-lg border border-gray-200 bg-white p-5 shadow-sm">
       <h2 class="text-xl font-semibold text-gray-900">Dati aziendali</h2>
@@ -55,7 +55,7 @@
 
       <div>
         <h2 class="text-xl font-semibold text-gray-900">Pagamenti</h2>
-        <p class="mt-3">I pagamenti sono gestiti da un fornitore esterno certificato. I dati di carta non sono archiviati su omniqlo.store; si applicano anche i termini del fornitore di pagamento.</p>
+        <p class="mt-3">I pagamenti sono gestiti da un fornitore esterno certificato. I dati di carta non sono archiviati su omniklad.com; si applicano anche i termini del fornitore di pagamento.</p>
       </div>
 
       <div>
