--- a/www/lp-003sl/index.html
+++ b/www/lp-003sl/index.html
@@ -44,7 +44,7 @@
         </div>
         <p class="text-base font-semibold text-emerald-700">Doručenie zdarma po celom Slovensku</p>
         <div class="flex flex-wrap gap-3">
-          <button type="button" data-open-modal class="rounded-md bg-indigo-600 px-5 py-3 text-base font-semibold text-white shadow hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Objednať teraz</button>
+          <button type="button" data-open-modal class="rounded-md bg-indigo-600 px-5 py-3 text-base font-semibold text-white shadow hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Požiadať o kontakt</button>
         </div>
       </div>
       <div class="flex justify-center lg:justify-end">
@@ -82,7 +82,7 @@
           <li class="flex items-start gap-2"><span class="mt-1 inline-block h-2 w-2 rounded-full bg-emerald-500"></span><span>Veľkosť projekcie 30–300″, vzdialenosť 1,5–6 m</span></li>
         </ul>
         <div class="flex flex-wrap gap-3">
-          <button type="button" data-open-modal class="rounded-md bg-indigo-600 px-5 py-3 text-base font-semibold text-white shadow hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Objednať teraz</button>
+          <button type="button" data-open-modal class="rounded-md bg-indigo-600 px-5 py-3 text-base font-semibold text-white shadow hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Požiadať o kontakt</button>
         </div>
       </div>
       <div class="rounded-2xl bg-white p-8 shadow-lg ring-1 ring-slate-200">
@@ -169,9 +169,9 @@
       <div class="grid gap-8 lg:grid-cols-2 lg:items-center">
         <div class="space-y-3">
           <h2 id="order-title" class="text-3xl font-semibold text-slate-900">Odoslať žiadosť</h2>
-          <p class="text-slate-600">Vyplňte meno, telefón, adresu a množstvo – ozveme sa vám na potvrdenie objednávky.</p>
+          <p class="text-slate-600">Vyplňte meno a telefónne číslo – naši manažéri vás budú čoskoro kontaktovať.</p>
         </div>
-        <form id="order-form" class="space-y-4" novalidate data-checkout-form="1">
+        <form id="order-form" class="space-y-4" novalidate>
           <div class="flex flex-col gap-2">
             <label for="name" class="text-sm font-semibold text-slate-800">Meno</label>
             <input id="name" name="name" type="text" required placeholder="Vaše meno" class="w-full rounded-md border border-slate-200 bg-white px-4 py-3 text-slate-900 shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-2 focus:ring-indigo-500" />
@@ -181,22 +181,9 @@
             <input id="phone" name="phone" type="tel" required placeholder="+421 ___ ___ ___" class="w-full rounded-md border border-slate-200 bg-white px-4 py-3 text-slate-900 shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-2 focus:ring-indigo-500" />
             <p id="phone-error" class="hidden text-sm text-red-600">Zadajte aspoň 7 číslic.</p>
           </div>
-          <div class="flex flex-col gap-2">
-            <label for="address" class="text-sm font-semibold text-slate-800">Adresa doručenia</label>
-            <input id="address" name="address" type="text" required placeholder="Mesto, ulica, číslo domu" class="w-full rounded-md border border-slate-200 bg-white px-4 py-3 text-slate-900 shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-2 focus:ring-indigo-500" />
-          </div>
-          <div class="flex flex-col gap-2">
-            <label for="quantity" class="text-sm font-semibold text-slate-800">Množstvo</label>
-            <input id="quantity" name="quantity" type="number" min="1" value="1" required class="w-full rounded-md border border-slate-200 bg-white px-4 py-3 text-slate-900 shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-2 focus:ring-indigo-500" />
-          </div>
-        <div class="flex items-start gap-2">
-          <input id="consent" name="consent" type="checkbox" required class="mt-1 h-4 w-4 rounded border-slate-300 text-indigo-600 focus:ring-indigo-500" />
-          <label for="consent" class="text-sm text-slate-700">Súhlasím so spracovaním osobných údajov podľa <a href="./privacy.html" class="text-indigo-600 hover:underline">Zásady ochrany osobných údajov</a>.</label>
-        </div>
-          <p id="consent-error" class="hidden text-sm text-red-600">Prosím, potvrďte súhlas so spracovaním údajov.</p>
           <div class="flex items-center gap-3">
-            <button type="submit" class="rounded-md bg-indigo-600 px-5 py-3 text-base font-semibold text-white shadow hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Objednať teraz</button>
-            <p id="form-status" class="text-sm text-emerald-700" data-checkout-status="1"></p>
+            <button type="submit" class="rounded-md bg-indigo-600 px-5 py-3 text-base font-semibold text-white shadow hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Požiadať o kontakt</button>
+            <p id="form-status" class="text-sm text-emerald-700"></p>
           </div>
         </form>
       </div>
@@ -213,20 +200,6 @@
           <a href="./refund.html" class="hover:underline">Odstúpenie a vrátenie</a>
           <a href="./contacts.html" class="hover:underline">Kontaktujte nás</a>
         </div>
-        <ul class="flex items-center gap-3">
-          <li class="list-payment__item">
-            <svg class="icon icon--full-color" xmlns="http://www.w3.org/2000/svg" role="img" aria-labelledby="pi-american_express" viewBox="0 0 38 24" width="38" height="24"><title id="pi-american_express">American Express</title><path fill="#000" d="M35 0H3C1.3 0 0 1.3 0 3v18c0 1.7 1.4 3 3 3h32c1.7 0 3-1.3 3-3V3c0-1.7-1.4-3-3-3Z" opacity=".07"></path><path fill="#006FCF" d="M35 1c1.1 0 2 .9 2 2v18c0 1.1-.9 2-2 2H3c-1.1 0-2-.9-2-2V3c0-1.1.9-2 2-2h32Z"></path><path fill="#FFF" d="M22.012 19.936v-8.421L37 11.528v2.326l-1.732 1.852L37 17.573v2.375h-2.766l-1.47-1.622-1.46 1.628-9.292-.02Z"></path><path fill="#006FCF" d="M23.013 19.012v-6.57h5.572v1.513h-3.768v1.028h3.678v1.488h-3.678v1.01h3.768v1.531h-5.572Z"></path><path fill="#006FCF" d="m28.557 19.012 3.083-3.289-3.083-3.282h2.386l1.884 2.083 1.89-2.082H37v.051l-3.017 3.23L37 18.92v.093h-2.307l-1.917-2.103-1.898 2.104h-2.321Z"></path><path fill="#FFF" d="M22.71 4.04h3.614l1.269 2.881V4.04h4.46l.77 2.159.771-2.159H37v8.421H19l3.71-8.421Z"></path><path fill="#006FCF" d="m23.395 4.955-2.916 6.566h2l.55-1.315h2.98l.55 1.315h2.05l-2.904-6.566h-2.31Zm.25 3.777.875-2.09.873 2.09h-1.748Z"></path><path fill="#006FCF" d="M28.581 11.52V4.953l2.811.01L32.84 9l1.456-4.046H37v6.565l-1.74.016v-4.51l-1.644 4.494h-1.59L30.35 7.01v4.51h-1.768Z"></path></svg>
-          </li>
-          <li class="list-payment__item">
-            <svg class="icon icon--full-color" viewBox="0 0 38 24" xmlns="http://www.w3.org/2000/svg" role="img" width="38" height="24" aria-labelledby="pi-master"><title id="pi-master">Mastercard</title><path opacity=".07" d="M35 0H3C1.3 0 0 1.3 0 3v18c0 1.7 1.4 3 3 3h32c1.7 0 3-1.3 3-3V3c0-1.7-1.4-3-3-3z"></path><path fill="#fff" d="M35 1c1.1 0 2 .9 2 2v18c0 1.1-.9 2-2 2H3c-1.1 0-2-.9-2-2V3c0-1.1.9-2 2-2h32"></path><circle fill="#EB001B" cx="15" cy="12" r="7"></circle><circle fill="#F79E1B" cx="23" cy="12" r="7"></circle><path fill="#FF5F00" d="M22 12c0-2.4-1.2-4.5-3-5.7-1.8 1.3-3 3.4-3 5.7s1.2 4.5 3 5.7c1.8-1.2 3-3.3 3-5.7z"></path></svg>
-          </li>
-          <li class="list-payment__item">
-            <svg class="icon icon--full-color" viewBox="-36 25 38 24" xmlns="http://www.w3.org/2000/svg" width="38" height="24" role="img" aria-labelledby="pi-unionpay"><title id="pi-unionpay">Union Pay</title><path fill="#005B9A" d="M-36 46.8v.7-.7zM-18.3 25v24h-7.2c-1.3 0-2.1-1-1.8-2.3l4.4-19.4c.3-1.3 1.9-2.3 3.2-2.3h1.4zm12.6 0c-1.3 0-2.9 1-3.2 2.3l-4.5 19.4c-.3 1.3.5 2.3 1.8 2.3h-4.9V25h10.8z"></path><path fill="#E9292D" d="M-19.7 25c-1.3 0-2.9 1.1-3.2 2.3l-4.4 19.4c-.3 1.3.5 2.3 1.8 2.3h-8.9c-.8 0-1.5-.6-1.5-1.4v-21c0-.8.7-1.6 1.5-1.6h14.7z"></path><path fill="#0E73B9" d="M-5.7 25c-1.3 0-2.9 1.1-3.2 2.3l-4.4 19.4c-.3 1.3.5 2.3 1.8 2.3H-26h.5c-1.3 0-2.1-1-1.8-2.3l4.4-19.4c.3-1.3 1.9-2.3 3.2-2.3h14z"></path><path fill="#059DA4" d="M2 26.6v21c0 .8-.6 1.4-1.5 1.4h-12.1c-1.3 0-2.1-1.1-1.8-2.3l4.5-19.4C-8.6 26-7 25-5.7 25H.5c.9 0 1.5.7 1.5 1.6z"></path><path fill="#fff" d="M-21.122 38.645h.14c.14 0 .28-.07.28-.14l.42-.63h1.19l-.21.35h1.4l-.21.63h-1.68c-.21.28-.42.42-.7.42h-.84l.21-.63m-.21.91h3.01l-.21.7h-1.19l-.21.7h1.19l-.21.7h-1.19l-.28 1.05c-.07.14 0 .28.28.21h.98l-.21.7h-1.89c-.35 0-.49-.21-.35-.63l.35-1.33h-.77l.21-.7h.77l.21-.7h-.7l.21-.7zm4.83-1.75v.42s.56-.42 1.12-.42h1.96l-.77 2.66c-.07.28-.35.49-.77.49h-2.24l-.49 1.89c0 .07 0 .14.14.14h.42l-.14.56h-1.12c-.42 0-.56-.14-.49-.35l1.47-5.39h.91zm1.68.77h-1.75l-.21.7s.28-.21.77-.21h1.05l.14-.49zm-.63 1.68c.14 0 .21 0 .21-.14l.14-.35h-1.75l-.14.56 1.54-.07zm-1.19.84h.98v.42h.28c.14 0 .21-.07.21-.14l.07-.28h.84l-.14.49c-.07.35-.35.49-.77.56h-.56v.77c0 .14.07.21.35.21h.49l-.14.56h-1.19c-.35 0-.49-.14-.49-.49l.07-2.1zm4.2-2.45l.21-.84h1.19l-.07.28s.56-.28 1.05-.28h1.47l-.21.84h-.21l-1.12 3.85h.21l-.21.77h-.21l-.07.35h-1.19l.07-.35h-2.17l.21-.77h.21l1.12-3.85h-.28m1.26 0l-.28 1.05s.49-.21.91-.28c.07-.35.21-.77.21-.77h-.84zm-.49 1.54l-.28 1.12s.56-.28.98-.28c.14-.42.21-.77.21-.77l-.91-.07zm.21 2.31l.21-.77h-.84l-.21.77h.84zm2.87-4.69h1.12l.07.42c0 .07.07.14.21.14h.21l-.21.7h-.77c-.28 0-.49-.07-.49-.35l-.14-.91zm-.35 1.47h3.57l-.21.77h-1.19l-.21.7h1.12l-.21.77h-1.26l-.28.42h.63l.14.84c0 .07.07.14.21.14h.21l-.21.7h-.7c-.35 0-.56-.07-.56-.35l-.14-.77-.56.84c-.14.21-.35.35-.63.35h-1.05l.21-.7h.35c.14 0 .21-.07.35-.21l.84-1.26h-1.05l.21-.77h1.19l.21-.7h-1.19l.21-.77zm-19.74-5.04c-.14.7-.42 1.19-.91 1.54-.49.35-1.12.56-1.89.56-.7 0-1.26-.21-1.54-.56-.21-.28-.35-.56-.35-.98 0-.14 0-.35.07-.56l.84-3.92h1.19l-.77 3.92v.28c0 .21.07.35.14.49.14.21.35.28.7.28s.7-.07.91-.28c.21-.21.42-.42.49-.77l.77-3.92h1.19l-.84 3.92m1.12-1.54h.84l-.07.49.14-.14c.28-.28.63-.42 1.05-.42.35 0 .63.14.77.35.14.21.21.49.14.91l-.49 2.38h-.91l.42-2.17c.07-.28.07-.49 0-.56-.07-.14-.21-.14-.35-.14-.21 0-.42.07-.56.21-.14.14-.28.35-.28.63l-.42 2.03h-.91l.63-3.57m9.8 0h.84l-.07.49.14-.14c.28-.28.63-.42 1.05-.42.35 0 .63.14.77.35s.21.49.14.91l-.49 2.38h-.91l.42-2.24c.07-.21 0-.42-.07-.49-.07-.14-.21-.14-.35-.14-.21 0-.42.07-.56.21-.14.14-.28.35-.28.63l-.42 2.03h-.91l.7-3.57m-5.81 0h.98l-.77 3.5h-.98l.77-3.5m.35-1.33h.98l-.21.84h-.98l.21-.84zm1.4 4.55c-.21-.21-.35-.56-.35-.98v-.21c0-.07 0-.21.07-.28.14-.56.35-1.05.7-1.33.35-.35.84-.49 1.33-.49.42 0 .77.14 1.05.35.21.21.35.56.35.98v.21c0 .07 0 .21-.07.28-.14.56-.35.98-.7 1.33-.35.35-.84.49-1.33.49-.35 0-.7-.14-1.05-.35m1.89-.7c.14-.21.28-.49.35-.84v-.35c0-.21-.07-.35-.14-.49a.635.635 0 0 0-.49-.21c-.28 0-.49.07-.63.28-.14.21-.28.49-.35.84v.28c0 .21.07.35.14.49.14.14.28.21.49.21.28.07.42 0 .63-.21m6.51-4.69h2.52c.49 0 .84.14 1.12.35.28.21.35.56.35.91v.28c0 .07 0 .21-.07.28-.07.49-.35.98-.7 1.26-.42.35-.84.49-1.4.49h-1.4l-.42 2.03h-1.19l1.19-5.6m.56 2.59h1.12c.28 0 .49-.07.7-.21.14-.14.28-.35.35-.63v-.28c0-.21-.07-.35-.21-.42-.14-.07-.35-.14-.7-.14h-.91l-.35 1.68zm8.68 3.71c-.35.77-.7 1.26-.91 1.47-.21.21-.63.7-1.61.7l.07-.63c.84-.28 1.26-1.4 1.54-1.96l-.28-3.78h1.19l.07 2.38.91-2.31h1.05l-2.03 4.13m-2.94-3.85l-.42.28c-.42-.35-.84-.56-1.54-.21-.98.49-1.89 4.13.91 2.94l.14.21h1.12l.7-3.29-.91.07m-.56 1.82c-.21.56-.56.84-.91.77-.28-.14-.35-.63-.21-1.19.21-.56.56-.84.91-.77.28.14.35.63.21 1.19"></path></svg>
-          </li>
-          <li class="list-payment__item">
-            <svg class="icon icon--full-color" viewBox="0 0 38 24" xmlns="http://www.w3.org/2000/svg" role="img" width="38" height="24" aria-labelledby="pi-visa"><title id="pi-visa">Visa</title><path opacity=".07" d="M35 0H3C1.3 0 0 1.3 0 3v18c0 1.7 1.4 3 3 3h32c1.7 0 3-1.3 3-3V3c0-1.7-1.4-3-3-3z"></path><path fill="#fff" d="M35 1c1.1 0 2 .9 2 2v18c0 1.1-.9 2-2 2H3c-1.1 0-2-.9-2-2V3c0-1.1.9-2 2-2h32"></path><path d="M28.3 10.1H28c-.4 1-.7 1.5-1 3h1.9c-.3-1.5-.3-2.2-.6-3zm2.9 5.9h-1.7c-.1 0-.1 0-.2-.1l-.2-.9-.1-.2h-2.4c-.1 0-.2 0-.2.2l-.3.9c0 .1-.1.1-.1.1h-2.1l.2-.5L27 8.7c0-.5.3-.7.8-.7h1.5c.1 0 .2 0 .2.2l1.4 6.5c.1.4.2.7.2 1.1.1.1.1.1.1.2zm-13.4-.3l.4-1.8c.1 0 .2.1.2.1.7.3 1.4.5 2.1.4.2 0 .5-.1.7-.2.5-.2.5-.7.1-1.1-.2-.2-.5-.3-.8-.5-.4-.2-.8-.4-1.1-.7-1.2-1-.8-2.4-.1-3.1.6-.4.9-.8 1.7-.8 1.2 0 2.5 0 3.1.2h.1c-.1.6-.2 1.1-.4 1.7-.5-.2-1-.4-1.5-.4-.3 0-.6 0-.9.1-.2 0-.3.1-.4.2-.2.2-.2.5 0 .7l.5.4c.4.2.8.4 1.1.6.5.3 1 .8 1.1 1.4.2.9-.1 1.7-.9 2.3-.5.4-.7.6-1.4.6-1.4 0-2.5.1-3.4-.2-.1.2-.1.2-.2.1zm-3.5.3c.1-.7.1-.7.2-1 .5-2.2 1-4.5 1.4-6.7.1-.2.1-.3.3-.3H18c-.2 1.2-.4 2.1-.7 3.2-.3 1.5-.6 3-1 4.5 0 .2-.1.2-.3.2M5 8.2c0-.1.2-.2.3-.2h3.4c.5 0 .9.3 1 .8l.9 4.4c0 .1 0 .1.1.2 0-.1.1-.1.1-.1l2.1-5.1c-.1-.1 0-.2.1-.2h2.1c0 .1 0 .1-.1.2l-3.1 7.3c-.1.2-.1.3-.2.4-.1.1-.3 0-.5 0H9.7c-.1 0-.2 0-.2-.2L7.9 9.5c-.2-.2-.5-.5-.9-.6-.6-.3-1.7-.5-1.9-.5L5 8.2z" fill="#142688"></path></svg>
-          </li>
-        </ul>
       </div>
     </div>
   </footer>
@@ -237,7 +210,7 @@
         <span aria-hidden="true">✕</span>
       </button>
         <h3 class="mb-4 text-xl font-semibold text-slate-900">Údaje o doručení</h3>
-      <form id="modal-form" class="space-y-4" novalidate data-checkout-form="1">
+      <form id="modal-form" class="space-y-4" novalidate>
         <div class="flex flex-col gap-2">
           <label for="modal-name" class="text-sm font-semibold text-slate-800">Meno</label>
           <input id="modal-name" name="name" type="text" required placeholder="Vaše meno" class="w-full rounded-md border border-slate-200 bg-white px-4 py-3 text-slate-900 shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-2 focus:ring-indigo-500" />
@@ -247,22 +220,9 @@
           <input id="modal-phone" name="phone" type="tel" required placeholder="+421 ___ ___ ___" class="w-full rounded-md border border-slate-200 bg-white px-4 py-3 text-slate-900 shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-2 focus:ring-indigo-500" />
           <p id="modal-phone-error" class="hidden text-sm text-red-600">Zadajte aspoň 7 číslic.</p>
         </div>
-        <div class="flex flex-col gap-2">
-          <label for="modal-address" class="text-sm font-semibold text-slate-800">Adresa doručenia</label>
-          <input id="modal-address" name="address" type="text" required placeholder="Mesto, ulica, číslo domu" class="w-full rounded-md border border-slate-200 bg-white px-4 py-3 text-slate-900 shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-2 focus:ring-indigo-500" />
-        </div>
-        <div class="flex flex-col gap-2">
-          <label for="modal-quantity" class="text-sm font-semibold text-slate-800">Množstvo</label>
-          <input id="modal-quantity" name="quantity" type="number" min="1" value="1" required class="w-full rounded-md border border-slate-200 bg-white px-4 py-3 text-slate-900 shadow-sm focus:border-indigo-500 focus:outline-none focus:ring-2 focus:ring-indigo-500" />
-        </div>
-        <div class="flex items-start gap-2">
-          <input id="modal-consent" name="consent" type="checkbox" required class="mt-1 h-4 w-4 rounded border-slate-300 text-indigo-600 focus:ring-indigo-500" />
-          <label for="modal-consent" class="text-sm text-slate-700">Súhlasím so spracovaním osobných údajov podľa <a href="./privacy.html" class="text-indigo-600 hover:underline">Zásady ochrany osobných údajov</a>.</label>
-        </div>
-        <p id="modal-consent-error" class="hidden text-sm text-red-600">Prosím, potvrďte súhlas so spracovaním údajov.</p>
           <div class="flex items-center gap-3">
-            <button type="submit" class="rounded-md bg-indigo-600 px-5 py-3 text-base font-semibold text-white shadow hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Objednať teraz</button>
-            <p id="modal-form-status" class="text-sm text-emerald-700" data-checkout-status="1"></p>
+            <button type="submit" class="rounded-md bg-indigo-600 px-5 py-3 text-base font-semibold text-white shadow hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Požiadať o kontakt</button>
+            <p id="modal-form-status" class="text-sm text-emerald-700"></p>
           </div>
       </form>
     </div>
@@ -275,10 +235,70 @@
     <img id="lightbox-image" src="" alt="Náhľad obrázka" class="max-h-[90vh] max-w-[90vw] w-auto rounded-xl object-contain shadow-2xl" />
   </div>
 
+
   <script>
-    window.CHECKOUT_API_BASE = "https://omniklad.com";  // one config for checkout endpoint
+    const LEAD_API_ENDPOINT = '../api/send_lead.php';
+
+    const setFormStatus = (statusEl, message, isError = false) => {
+      if (!statusEl) return;
+      statusEl.textContent = message || '';
+      statusEl.classList.toggle('text-red-600', Boolean(isError));
+      statusEl.classList.toggle('text-emerald-700', !isError);
+    };
+
+    const bindLeadForm = (formId, statusId, phoneErrorId) => {
+      const form = document.getElementById(formId);
+      if (!form) return;
+
+      const statusEl = document.getElementById(statusId);
+      const phoneError = document.getElementById(phoneErrorId);
+
+      form.addEventListener('submit', async (event) => {
+        event.preventDefault();
+
+        const submitButton = form.querySelector('button[type="submit"]');
+        const name = (form.querySelector('[name="name"]')?.value || '').trim();
+        const phone = (form.querySelector('[name="phone"]')?.value || '').trim();
+        const phoneDigits = phone.replace(/\D/g, '');
+
+        if (phoneDigits.length < 7) {
+          if (phoneError) phoneError.classList.remove('hidden');
+          setFormStatus(statusEl, 'Skontrolujte telefónne číslo.', true);
+          return;
+        }
+
+        if (phoneError) phoneError.classList.add('hidden');
+        if (submitButton) submitButton.disabled = true;
+        setFormStatus(statusEl, 'Odosielame vašu žiadosť...');
+
+        try {
+          const response = await fetch(LEAD_API_ENDPOINT, {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({
+              name,
+              phone,
+              landing: 'lp-003sl',
+              page_url: window.location.href,
+              utm: Object.fromEntries(new URLSearchParams(window.location.search)),
+            }),
+          });
+
+          const data = await response.json();
+          if (!response.ok || !data?.ok || !data?.redirect_url) throw new Error('request_failed');
+
+          window.location.href = data.redirect_url;
+        } catch (error) {
+          setFormStatus(statusEl, 'Nepodarilo sa odoslať žiadosť. Skúste to znova.', true);
+        } finally {
+          if (submitButton) submitButton.disabled = false;
+        }
+      });
+    };
+
+    bindLeadForm('order-form', 'form-status', 'phone-error');
+    bindLeadForm('modal-form', 'modal-form-status', 'modal-phone-error');
   </script>
-  <script src="../_shared/checkout.js"></script>
 
   <script>
     const modal = document.getElementById('modal');
