--- a/www/lp-003sl/thankyou.html
+++ b/www/lp-003sl/thankyou.html
@@ -3,23 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ďakujeme! Žiadosť prijatá</title>
+  <title>Ďakujeme! Vaša žiadosť bola odoslaná</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="min-h-full bg-slate-50 text-slate-900">
   <main class="mx-auto flex min-h-screen max-w-3xl items-center px-6 py-16">
     <div class="w-full rounded-2xl bg-white p-8 shadow-lg ring-1 ring-slate-200 text-center space-y-4">
       <p class="text-sm font-semibold uppercase tracking-wide text-emerald-600">Úspešne</p>
-      <h1 class="text-3xl font-bold">Ďakujeme! Vašu žiadosť sme prijali</h1>
-      <p class="text-slate-600">Čoskoro vás budeme kontaktovať s detailmi doručenia.</p>
-      <p id="order-status" class="hidden text-sm text-slate-700">Číslo objednávky: <span id="order-id" class="font-semibold"></span></p>
+      <h1 class="text-3xl font-bold">Ďakujeme! Vaša žiadosť bola odoslaná</h1>
+      <p class="text-slate-600">Naši manažéri vás budú čoskoro kontaktovať telefonicky, aby upresnili detaily objednávky a doručenia.</p>
+      <p class="text-sm text-slate-700">Prosím, majte zapnutý telefón.</p>
       <a href="./" class="inline-flex rounded-md bg-indigo-600 px-5 py-3 text-white font-semibold hover:bg-indigo-700">Späť na stránku</a>
     </div>
   </main>
-  <script>
-    function getOrderId(){const p=new URLSearchParams(window.location.search);const id=p.get('order_id');return id?id.trim():'';}
-    function renderOrderId(){const orderId=getOrderId();if(!orderId)return;const container=document.getElementById('order-status');const target=document.getElementById('order-id');target.textContent=orderId;container.classList.remove('hidden');}
-    document.addEventListener('DOMContentLoaded',renderOrderId);
-  </script>
 </body>
 </html>
